BAP-11286: Width of uniform select differs from other inputs - fixed 1px gap of inputs on opportunity page

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/oro.less
@@ -3329,17 +3329,19 @@ label .popover-content {
       font-size: 14px;
     }
   }
-  &:not(.entity-create-enabled):not(.entity-create-multi-enabled) {
-    .input-append .select2-container {
-      width: 263px;
-    }
-  }
 }
 
 .entity-create-enabled {
   .input-prepend .select2-container,
   .input-append .select2-container {
     width: 229px;
+  }
+}
+
+.control-group-justified {
+  .input-prepend .select2-container,
+  .input-append .select2-container {
+    width: 263px;
   }
 }
 
